--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.3",
+    "qs": "^6.11.0"
   },
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "devDependencies": {
+    "json-server": "^0.17.1"
+  }
 }
